Add media queries

--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,15 @@ body {
 }
 
 .container {
-	width: 50%;
 	text-align: center;
 	margin: 0 auto;
+}
+
+@media only screen 
+and (min-width : 1224px) {
+	.container {
+		width: 50%;
+	}
 }
 
 p {
